# ACT4E-mcdp-package

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bump-version.sh  mkdocs.yml  pyproject.toml
assets/test-data/: Makefile  cookies.txt
assets/test-data/downloaded/: lib1-parts.discrete.posets.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e01_empty-0000.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e02_direct_connection-0000.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e02_direct_connection-0005.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e02_direct_connection-0009.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e02_direct_connection-0010.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0000.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0001.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0002.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0003.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0004.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0006.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0007.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0008.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0009.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e03_splitter1-0010.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0000.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0001.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0002.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0003.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0004.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0005.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0006.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0007.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0008.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e04_splitter2-0009.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0000.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0001.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0002.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0003.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0004.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0005.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0006.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0007.mcdpr1.yaml  lib1-parts.dp-queries.FixFunMinRes.e05_multf-0008.mcdpr1.yaml  (+805 more)
docs/: API_nameddps.md  API_posets.md  API_primitivedps.md  API_solution.md  exercise.md  index.md
docs/API/: API_solution.md
docs/javascripts/: mathjax.js
src/act4e_mcdp/: __init__.py  autogen_packed_test_data.py  coords.py  download.py  loading.py  main.py  main_solve_dp.py  main_solve_dp_queries.py  main_solve_mcdp.py  nameddps.py  posets.py  primitivedps.py  solution_interface.py  structures.py  utils.py
src/act4e_mcdp_tests/: test_load.py
(+1301 files in other folders)
