[project]
name = "ACT4E-mcdp"
version = "0.1"
authors = [{ name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com" }]
dependencies = [
    "ACT4E-mcdp",
]

[tool]
[tool.poetry]
name = "ACT4E-mcdp"
version = "0.1"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    { from = "src", include = "act4e_mcdp" },
]

[tool.setuptools]
packages = [
    "act4e_mcdp",
]
package-dir = { "" = "src" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
act4e-mcdp-solve = 'act4e_mcdp:solve_main'
