[project]
name = "ACT4E-mcdp"
authors = [{ name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com" }]
dependencies = [
    "ACT4E-mcdp",
]

[tool]
[tool.poetry]
name = "ACT4E-mcdp"
version = "0.0.0"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    { from = "src", include = "act4e_mcdp" },
]
[tool.poetry.dependencies]
python = "^3.10"

[tool.setuptools]
packages = [
    "act4e_mcdp",
]
package-dir = { "" = "src" }

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
act4e-mcdp-solve = 'act4e_mcdp:solve_main'
#[tool.poetry_bumpversion.file."src/act4e_mcdp/__init__.py"]
# Duplicate the line above to add more files
[tool.poetry-dynamic-versioning]
enable = true

# metadata = false
#dirty = true

vcs = "git"
#style = "semver"
