[project]
name = "ACT4E-mcdp"
authors = [{ name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com" }]
dependencies = [
    "ACT4E-mcdp",
    "coloredlogs",
]

[tool]
[tool.poetry]
name = "ACT4E-mcdp"
version = "0.0.0"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    { from = "src", include = "act4e_mcdp" },
]
[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"
pydantic = "^2.5.2"
rich = "^13.7.0"

[tool.setuptools]
packages = [
    "act4e_mcdp",
]
package-dir = { "" = "src" }

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
act4e-mcdp-solve-dp = 'act4e_mcdp:solve_dp_main'
act4e-mcdp-solve-dp-queries = 'act4e_mcdp:solve_dp_queries_main'
act4e-mcdp-solve-mcdp = 'act4e_mcdp:solve_mcdp_main'
act4e-mcdp-solve-mcdp-queries = 'act4e_mcdp:solve_mcdp_queries_main'
act4e-mcdp-download-tests = 'act4e_mcdp:download_main'

#[tool.poetry_bumpversion.file."src/act4e_mcdp/__init__.py"]
# Duplicate the line above to add more files
[tool.poetry-dynamic-versioning]
enable = true

dirty = false
metadata= false
tagged-metadata= false
vcs = "git"
style = "pep440"
strict = true

# pip install "mkdocstrings[python]"  mkdocs-material

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src" }
]
